[gd_scene load_steps=5 format=3 uid="uid://d4fw7gluhvq7q"]

[ext_resource type="Script" uid="uid://rtxw24bekjr3" path="res://Scripts/bridge.gd" id="1_4lqne"]
[ext_resource type="Texture2D" uid="uid://bfpka0yci0fyb" path="res://Images/Platformer Tileset/Props/bridge.png" id="1_vo61l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jekfe"]
size = Vector2(15, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tyy6o"]
size = Vector2(16, 1)

[node name="Bridge" type="Node2D"]

[node name="Bridge1" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = ExtResource("1_vo61l")
hframes = 9
script = ExtResource("1_4lqne")

[node name="Area2D" type="Area2D" parent="Bridge1"]
position = Vector2(0, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge1/Area2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_jekfe")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge1"]
position = Vector2(0, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge1/StaticBody2D"]
position = Vector2(-2.23517e-08, -3)
rotation = 0.174533
shape = SubResource("RectangleShape2D_tyy6o")

[node name="Timer" type="Timer" parent="Bridge1"]

[node name="Bridge2" type="Sprite2D" parent="."]
position = Vector2(24, 8)
texture = ExtResource("1_vo61l")
hframes = 9
frame = 1
script = ExtResource("1_4lqne")

[node name="Area2D" type="Area2D" parent="Bridge2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge2/Area2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_jekfe")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge2/StaticBody2D"]
position = Vector2(-2.23517e-08, -3)
rotation = 0.174533
shape = SubResource("RectangleShape2D_tyy6o")

[node name="Timer" type="Timer" parent="Bridge2"]

[node name="Bridge3" type="Sprite2D" parent="."]
position = Vector2(40, 8)
texture = ExtResource("1_vo61l")
hframes = 9
frame = 2
script = ExtResource("1_4lqne")

[node name="Area2D" type="Area2D" parent="Bridge3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge3/Area2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_jekfe")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge3/StaticBody2D"]
position = Vector2(-6.70552e-08, 0)
rotation = 0.174533
shape = SubResource("RectangleShape2D_tyy6o")

[node name="Timer" type="Timer" parent="Bridge3"]

[node name="Bridge4" type="Sprite2D" parent="."]
position = Vector2(56, 8)
texture = ExtResource("1_vo61l")
hframes = 9
frame = 3
script = ExtResource("1_4lqne")

[node name="Area2D" type="Area2D" parent="Bridge4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge4/Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_jekfe")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge4/StaticBody2D"]
position = Vector2(0, 2)
rotation = 0.0698132
shape = SubResource("RectangleShape2D_tyy6o")

[node name="Timer" type="Timer" parent="Bridge4"]

[node name="Bridge5" type="Sprite2D" parent="."]
position = Vector2(72, 8)
texture = ExtResource("1_vo61l")
hframes = 9
frame = 4
script = ExtResource("1_4lqne")

[node name="Area2D" type="Area2D" parent="Bridge5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge5/Area2D"]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_jekfe")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge5/StaticBody2D"]
position = Vector2(0, 2.55)
shape = SubResource("RectangleShape2D_tyy6o")

[node name="Timer" type="Timer" parent="Bridge5"]

[node name="Bridge6" type="Sprite2D" parent="."]
position = Vector2(88, 8)
texture = ExtResource("1_vo61l")
hframes = 9
frame = 5
script = ExtResource("1_4lqne")

[node name="Area2D" type="Area2D" parent="Bridge6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge6/Area2D"]
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_jekfe")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge6/StaticBody2D"]
position = Vector2(0, 2)
rotation = -0.0698132
shape = SubResource("RectangleShape2D_tyy6o")

[node name="Timer" type="Timer" parent="Bridge6"]

[node name="Bridge7" type="Sprite2D" parent="."]
position = Vector2(104, 8)
texture = ExtResource("1_vo61l")
hframes = 9
frame = 6
script = ExtResource("1_4lqne")

[node name="Area2D" type="Area2D" parent="Bridge7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge7/Area2D"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_jekfe")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge7/StaticBody2D"]
position = Vector2(-6.70552e-08, 0)
rotation = -0.174533
shape = SubResource("RectangleShape2D_tyy6o")

[node name="Timer" type="Timer" parent="Bridge7"]

[node name="Bridge8" type="Sprite2D" parent="."]
position = Vector2(120, 8)
texture = ExtResource("1_vo61l")
hframes = 9
frame = 7
script = ExtResource("1_4lqne")

[node name="Area2D" type="Area2D" parent="Bridge8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge8/Area2D"]
position = Vector2(0, -5)
shape = SubResource("RectangleShape2D_jekfe")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge8/StaticBody2D"]
position = Vector2(-2.23517e-08, -3)
rotation = -0.174533
shape = SubResource("RectangleShape2D_tyy6o")

[node name="Timer" type="Timer" parent="Bridge8"]

[node name="Bridge9" type="Sprite2D" parent="."]
position = Vector2(136, 8)
texture = ExtResource("1_vo61l")
hframes = 9
frame = 8
script = ExtResource("1_4lqne")

[node name="Area2D" type="Area2D" parent="Bridge9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge9/Area2D"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_jekfe")

[node name="StaticBody2D" type="StaticBody2D" parent="Bridge9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bridge9/StaticBody2D"]
position = Vector2(2.23517e-08, -6)
rotation = -0.174533
shape = SubResource("RectangleShape2D_tyy6o")

[node name="Timer" type="Timer" parent="Bridge9"]

[connection signal="body_entered" from="Bridge1/Area2D" to="Bridge1" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Bridge1/Timer" to="Bridge1" method="_on_timer_timeout"]
[connection signal="body_entered" from="Bridge2/Area2D" to="Bridge2" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Bridge2/Timer" to="Bridge2" method="_on_timer_timeout"]
[connection signal="body_entered" from="Bridge3/Area2D" to="Bridge3" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Bridge3/Timer" to="Bridge3" method="_on_timer_timeout"]
[connection signal="body_entered" from="Bridge4/Area2D" to="Bridge4" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Bridge4/Timer" to="Bridge4" method="_on_timer_timeout"]
[connection signal="body_entered" from="Bridge5/Area2D" to="Bridge5" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Bridge5/Timer" to="Bridge5" method="_on_timer_timeout"]
[connection signal="body_entered" from="Bridge6/Area2D" to="Bridge6" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Bridge6/Timer" to="Bridge6" method="_on_timer_timeout"]
[connection signal="body_entered" from="Bridge7/Area2D" to="Bridge7" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Bridge7/Timer" to="Bridge7" method="_on_timer_timeout"]
[connection signal="body_entered" from="Bridge8/Area2D" to="Bridge8" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Bridge8/Timer" to="Bridge8" method="_on_timer_timeout"]
[connection signal="body_entered" from="Bridge9/Area2D" to="Bridge9" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Bridge9/Timer" to="Bridge9" method="_on_timer_timeout"]
